--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="reader" style="width:300px;"></div>
 
-    <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+    <script src="https://unpkg.com/html5-qrcode"></script>
     <script src="script.js"></script>
 </body>
 </html>
