--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Escaneo de DNI</title>
 </head>
 <body>
-    <form id="dniForm" action="tu-ruta-de-envio" method="post">
-        <input type="text" id="dni" name="dni" placeholder="Ingresa tu DNI" required>
+    <form id="dniForm" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeHAdC4uWo8BrVJNbmE_jj6tkxHzBQFBDxo8VPsITxpZz3lrQ/formResponse" method="post"">
+        <input type="text" id="dni" name="entry.1821725391" placeholder="Ingresa tu DNI" required>
         <button type="button" id="scanBtn">Scan</button>
         <button type="submit">Enviar</button>
     </form>
