--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Escaneo de DNI</title>
 </head>
 <body>
-    <form id="dniForm" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeHAdC4uWo8BrVJNbmE_jj6tkxHzBQFBDxo8VPsITxpZz3lrQ/formResponse" method="post"">
+    <form id="dniForm" action="" method="post"">
         <input type="text" id="dni" name="entry.1821725391" placeholder="Ingresa tu DNI" required>
         <button type="button" id="scanBtn">Scan</button>
         <button type="submit">Enviar</button>
